Site-specific changes for Edge

--- a/_includes/global-header.html
+++ b/_includes/global-header.html
@@ -40,7 +40,7 @@
                                 <ul>
                                     <li><a href="https://cloud.docker.com/">Create Docker ID</a></li>
                                     <li><a href="https://cloud.docker.com/login">Sign In</a></li>
-                                </ul>                       
+                                </ul>
                             </div> -->
                         </div>
                     <!--/.nav-collapse -->
@@ -53,7 +53,7 @@
         <div class="row">
             <div class="hero-text">
                 <div class="hero-text-centered">
-                    <h1>Docker Documentation</h1>
+                    <h1>{{ site.name }}</h1>
                     <p>Docker provides a way to run applications securely isolated in a container, packaged with all its dependencies and libraries.</p>
                     <ul class="buttons">
                         <li><a class="button transparent-btn" href="/engine/installation/" target="_blank">Get Docker</a></li>
