--- a/_includes/global-header.html
+++ b/_includes/global-header.html
@@ -62,6 +62,7 @@
                 </div>
             </div>
         </div>
+        <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
         <a href="http://2017.dockercon.com/register-dockercon-2017/" target="_blank">
         <div class="banner">
             <img src="images/dockercon-register-now.svg">
