2653 : update dockercon banner and link (#2711)
* add dockerconbanner

* update svg

* Add Comfortaa to HTML

* update svg

this has been converted to outlines

* Update global-header.html

--- a/_includes/global-header.html
+++ b/_includes/global-header.html
@@ -62,9 +62,9 @@
                 </div>
             </div>
         </div>
-        <a href="http://2017.dockercon.com/" target="_blank">
+        <a href="http://2017.dockercon.com/register-dockercon-2017/" target="_blank">
         <div class="banner">
-            <img src="images/dockercon.svg">
+            <img src="images/dockercon-register-now.svg">
         </div>
         </a>
     </div>
