Move Glossary left-nav to be procedurally generated

--- a/_includes/treebuilder.html
+++ b/_includes/treebuilder.html
@@ -1,5 +1,9 @@
 {% assign topicFound="false" %}
 {% for section in site.data.toc.horizontalnav %}
+{% if section.node == "glossary" %}
+  {% capture leftnav %}{% for entry in site.data.glossary %}
+  <li><a href="/glossary/?term={{ entry[0] }}">{{ entry[0] }}</a></li>{% endfor %}{% endcapture %}
+{% else %}
   {% assign activeCSS = "" %}
   {% if topicFound=="false" %}
     {% assign tree = site.data.toc[section.node] %}
@@ -10,7 +14,8 @@
       {% assign topicFound="true" %}
     {% endif %}
   {% endif %}
-  <li id="{{ section.node }}"{{ activeCSS }}><a href="{{ section.path }}">{{ section.title }}</a></li>
+{% endif %}
+<li id="{{ section.node }}"{{ activeCSS }}><a href="{{ section.path }}">{{ section.title }}</a></li>
 {% endfor %}
 {% if site.edge == true %}
   <li id="stable-cta"><a href="/">Back to Stable docs</a></li>
