--- a/css/pygments/perldoc.css
+++ b/css/pygments/perldoc.css
@@ -1,41 +1,42 @@
+/*
 .highlight .hll { background-color: #ffffcc }
-.highlight  { background: #eeeedd; }
+.highlight  { background: #eeeedd } */
 .highlight .c { color: #228B22 } /* Comment */
-.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
-.highlight .k { color: #8B008B; font-weight: bold } /* Keyword */
+.highlight .err { color: #a61717 } /* Error */
+.highlight .k { color: #8B008B } /* Keyword */
 .highlight .ch { color: #228B22 } /* Comment.Hashbang */
 .highlight .cm { color: #228B22 } /* Comment.Multiline */
 .highlight .cp { color: #1e889b } /* Comment.Preproc */
 .highlight .cpf { color: #228B22 } /* Comment.PreprocFile */
 .highlight .c1 { color: #228B22 } /* Comment.Single */
-.highlight .cs { color: #8B008B; font-weight: bold } /* Comment.Special */
+.highlight .cs { color: #8B008B } /* Comment.Special */
 .highlight .gd { color: #aa0000 } /* Generic.Deleted */
 .highlight .ge { font-style: italic } /* Generic.Emph */
 .highlight .gr { color: #aa0000 } /* Generic.Error */
-.highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */
+.highlight .gh { color: #000080 } /* Generic.Heading */
 .highlight .gi { color: #00aa00 } /* Generic.Inserted */
 .highlight .go { color: #888888 } /* Generic.Output */
-.highlight .gp { color: #555555; font-weight: bold;} /* Generic.Prompt */
-.highlight .gs { font-weight: bold } /* Generic.Strong */
-.highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
+.highlight .gp { color: #555555 } /* Generic.Prompt */
+.highlight .gs {} /* Generic.Strong */
+.highlight .gu { color: #800080 } /* Generic.Subheading */
 .highlight .gt { color: #aa0000 } /* Generic.Traceback */
-.highlight .kc { color: #8B008B; font-weight: bold } /* Keyword.Constant */
-.highlight .kd { color: #8B008B; font-weight: bold } /* Keyword.Declaration */
-.highlight .kn { color: #8B008B; font-weight: bold } /* Keyword.Namespace */
-.highlight .kp { color: #8B008B; font-weight: bold } /* Keyword.Pseudo */
-.highlight .kr { color: #8B008B; font-weight: bold } /* Keyword.Reserved */
-.highlight .kt { color: #00688B; font-weight: bold } /* Keyword.Type */
+.highlight .kc { color: #8B008B } /* Keyword.Constant */
+.highlight .kd { color: #8B008B } /* Keyword.Declaration */
+.highlight .kn { color: #8B008B } /* Keyword.Namespace */
+.highlight .kp { color: #8B008B } /* Keyword.Pseudo */
+.highlight .kr { color: #8B008B } /* Keyword.Reserved */
+.highlight .kt { color: #00688B } /* Keyword.Type */
 .highlight .m { color: #B452CD } /* Literal.Number */
 .highlight .s { color: #CD5555 } /* Literal.String */
 .highlight .na { color: #658b00 } /* Name.Attribute */
 .highlight .nb { color: #658b00 } /* Name.Builtin */
-.highlight .nc { color: #008b45; font-weight: bold } /* Name.Class */
+.highlight .nc { color: #008b45 } /* Name.Class */
 .highlight .no { color: #00688B } /* Name.Constant */
 .highlight .nd { color: #707a7c } /* Name.Decorator */
-.highlight .ne { color: #008b45; font-weight: bold } /* Name.Exception */
+.highlight .ne { color: #008b45 } /* Name.Exception */
 /*.highlight .nf { color: #008b45 }  Name.Function */
-.highlight .nn { color: #008b45; text-decoration: underline } /* Name.Namespace */
-.highlight .nt { color: #8B008B; font-weight: bold } /* Name.Tag */
+.highlight .nn { color: #008b45 } /* Name.Namespace */
+.highlight .nt { color: #8B008B } /* Name.Tag */
 .highlight .nv { color: #00688B } /* Name.Variable */
 .highlight .ow { color: #8B008B } /* Operator.Word */
 .highlight .w { color: #bbbbbb } /* Text.Whitespace */
@@ -51,7 +52,7 @@
 .highlight .sd { color: #CD5555 } /* Literal.String.Doc */
 .highlight .s2 { color: #CD5555 } /* Literal.String.Double */
 .highlight .se { color: #CD5555 } /* Literal.String.Escape */
-.highlight .sh { color: #1c7e71; font-style: italic } /* Literal.String.Heredoc */
+.highlight .sh { color: #1c7e71 } /* Literal.String.Heredoc */
 .highlight .si { color: #CD5555 } /* Literal.String.Interpol */
 .highlight .sx { color: #cb6c20 } /* Literal.String.Other */
 .highlight .sr { color: #1c7e71 } /* Literal.String.Regex */
