--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,14 +27,16 @@
                     </button>
                 </div>
             <div>
-            <div id="tabs">
-                <ul class="tabs">
-                    {% include treebuilder.html %}
-                </ul>
-            </div>
-            <div class="ctrl-right hidden-xs hidden-sm">
-                <a href="javascript:void(0)" id="menu-toggle"><i class="fa fa-indent" aria-hidden="true"></i></a>
-                {% include archive-list.html %}
+            <div class="nav-container">
+                <div id="tabs">
+                    <ul class="tabs">
+                        {% include treebuilder.html %}
+                    </ul>
+                </div>
+                <div class="ctrl-right hidden-xs hidden-sm">
+                    <a href="javascript:void(0)" id="menu-toggle"><i class="fa fa-indent" aria-hidden="true"></i></a>
+                    {% include archive-list.html %}
+                </div>
             </div>
         </div>
     </div>
