--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -9,6 +9,8 @@
 else %}{% assign edit_url = "" %}{% endif %} {% break %} {% endif %} {% endfor %}
 
 <!-- End of logic for 'edit this button' -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -189,6 +191,16 @@ else %}{% assign edit_url = "" %}{% endif %} {% break %} {% endif %} {% endfor %
 		</div>
 	</div>
 
+	{% if page.path == "404.md" %}
+		<script type="text/javascript">
+			var path = window.location.pathname.replace("#","");
+			var ghIssueQueryString = "https://github.com/docker/docker.github.io/issues/new?" + "title=404%20at%20" + path + "&body=URL%3A%20" + path;
+			document.getElementsByClassName("nomunge")[1].onclick = function() {
+				 document.getElementsByClassName("nomunge")[1].href = ghIssueQueryString;
+				 return true;
+			};
+		</script>
+	{% endif %}
 	<footer class="footer">
 		{% include footer.html %}
 	</footer>
