New 6-page "Get Started" (#2296)
* Create index.md

* Create part2.md

* Create part3.md

* Create part4.md

* Create part5.md

* Rewrite step 2

* Update part2.md

* Update part2.md

* Update part2.md

* Update part2.md

* Update part2.md

* Update part2.md

* Update index.md

* Rewrite of part 3

* Tabs-based swarm instructions, pass 1

* Rewrite of parts 3 and 4, tabs implementation

* Navigation, rewrites, part 4 completion

* Part 5 w/Redis

* Part 5, compelte Redis, rename part 6

* TOC/redirect implementation

* Update part6.md

* Changing links to point to new tutorial

* Rewrites and asciinemas

* Fix overview

* Label diagrams

* Fix button

* Fix link to where Stacks are covered

* Fix typo

* s/file/directory

* Reformat paragraph

* Shorten tabs

* Typos

* Release DTR 2.2.4, 2.1.6

* Go back to small /edge (#2736)

* Go back to small /edge

* Update site front page

Add info about Editions
Reorganize components
Update headings

* Move logic of fetching content to a script

* Add v1.28 API

* Add info about versioned API

* Fix a few 404s (#2785)

* Fix typo

* Propose use of another word (#2791)

I think that interested is better than invested, in this case.

* Update secrets.md (#2780)

remove correct secret

* Change mount syntax on windows from //c/ to c:\ (#2761)

LGTM

* Update hackathon.md (#2773)

* nodes.md grammar correction (#2802)

* Grammar and formatting check (#2797)

* Wrong article

If the first word starts with a vowel sound you use an. If the first word has a consonant sound use a.

* Making the text bold

Removing backticks because probably the text needs to be bold and not marked as code.

* Update overview.md (#2805)

It should say 'predecessors', not 'successors'. Otherwise the sentence and the subsequent example don't make sense.

* shrink some big images (#2798)

Signed-off-by: Cristian Staretu <cristian.staretu@

--- a/_includes/global-header.html
+++ b/_includes/global-header.html
@@ -57,7 +57,7 @@
                     <p>Docker provides a way to run applications securely isolated in a container, packaged with all its dependencies and libraries.</p>
                     <ul class="buttons">
                         <li><a class="button transparent-btn" href="/engine/installation/" target="_blank">Get Docker</a></li>
-                        <li> <a class="button secondary-btn" href="/learn/" target="_blank">Get Started</a></li>
+                        <li> <a class="button secondary-btn" href="/get-started/" target="_blank">Get Started</a></li>
                     </ul>
                 </div>
             </div>
