Simplify both left and right sidebars
- Rewrite the sidebars to use the same CSS class instead of having two
  very similar classes. This involves removing all affix related
  attributes and functionality from the sidebars and replaced them with
  `position: sticky`.
- The table of content elements should not be floated
- Removed unused CSS rules related to the sidebars
- Remove JavaScript used to resize the sidebars

--- a/_includes/side-menu.html
+++ b/_includes/side-menu.html
@@ -1,5 +1,5 @@
 {% if page.landing == true %}<div id="navbar" class="nav-sidebar">{%else%}<div id="navbar" class="nav-sidebar">{% endif %}
-    <ul class="nav" affix" {% if page.landing == true %}data-spy="affix" data-offset-top="490"{% endif %}>
+    <ul class="nav">
       {{ leftnav }}
     </ul>
 </div>
