--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -154,35 +154,6 @@ section.section {
 *
 */
 
-#sidebar-wrapper {
-    background-color: $bg-sidebar;
-    // border-left: 1px solid rgba(204, 204, 204, 0.29);
-    height: 100%;
-    position: fixed;
-    padding: 70px 0 0;
-    overflow-y: auto;
-    overflow-x: hidden;
-    right: 250px;
-    margin-right: -250px;
-    width: 0;
-    transition: all 0.5s ease;
-}
-
-#sidebar-right {
-    background-color: $bg-sidebar;
-    // border-left: 1px solid rgba(204, 204, 204, 0.29);
-    height: 100%;
-    padding-top: 20px;
-    width: 270px;
-    min-height: 800px;
-}
-
-#sidebar-right.affix {
-    top: 10px;
-    position: fixed;
-    min-height: 800px;
-}
-
 .wrapper.right-open #sidebar-wrapper {
     width: 270px;                                                                                                                                                                            
 }
@@ -197,43 +168,27 @@ section.section {
 * Sidebar
 */
 
-.sidebar-home {
-    background-color: $bg-sidebar;
-    // border-right: 1px solid rgba(204, 204, 204, 0.29);
-    overflow-x: hidden;
-    overflow-y: auto;
-    min-height: 800px;
-    height: 100%;
-    width: 270px;
-    padding-top: 20px;
+.col-nav,
+.col-toc {
+    min-height: 100vh;
 }
 
-.sidebar-home .affix {
+.col-nav,
+.col-toc,
+.sidebar {
     background-color: $bg-sidebar;
-    // border-right: 1px solid rgba(204, 204, 204, 0.29);
+}
+
+.col-toc {
+    margin-left: auto;
+}
+
+.sidebar {
+    position: -webkit-sticky;
+    position: sticky;
     top: 55px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    padding-bottom: 100px;
-    height: 100%;
-    width: 270px;
-}
-
-
-/*.sidebar-home .affix {}*/
-
-.sidebar,.sidebar.affix  {
-    background-color: $bg-sidebar;
-    // border-right: 1px solid rgba(204,204,204,0.29);
-    top: 51px;
-    bottom: 0;
-    left: 0;
-    display: block;
-    padding: 0;
-    overflow-x: hidden;
-    overflow-y: auto;
-    padding: 20px 10px 100px 0;
-    position: fixed;
-    height: 100% !important;
-    width: 270px;
+    overflow-y: scroll;
+    max-height: calc(100vh - 55px);
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
