Fix disappearing top navbar on homepage
- Change the calculation of the affix offset for the navbar on the home
  page to ensure the navbar never leaves the viewport. This change also
  takes into account the change of how the sidebars' offsets are used

--- a/_includes/global-header.html
+++ b/_includes/global-header.html
@@ -69,7 +69,8 @@
         </a>
     </div>
     <!-- nav-secondary -->
-    <nav class="nav-secondary-tabs" data-spy="affix" data-offset-top="490">
+    <!-- data-offset-top should calculated as follows: (height of <header> - header of <nav>) -->
+    <nav class="nav-secondary-tabs" data-spy="affix" data-offset-top="385">
         <div class="container-fluid-fluid">
             <div class="row">
                 <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
