Fix sidebar scrolling (#2860)
* Simplify both left and right sidebars

- Rewrite the sidebars to use the same CSS class instead of having two
  very similar classes. This involves removing all affix related
  attributes and functionality from the sidebars and replaced them with
  `position: sticky`.
- The table of content elements should not be floated
- Removed unused CSS rules related to the sidebars
- Remove JavaScript used to resize the sidebars

* Improve the mobile menu to be fixed

- Simply JS used to hide/display the navigation bar on mobile viewports
- The mobile menu should be fixed so it can be viewable from the bottom
  of the page. Before this change, you would have to scroll up to see
  the menu that `position: absolute`

* Fix disappearing top navbar on homepage

- Change the calculation of the affix offset for the navbar on the home
  page to ensure the navbar never leaves the viewport. This change also
  takes into account the change of how the sidebars' offsets are used

* Fix auto scrolling on overflow

* Add polyfill for 'position: sticky' on IE

* Fix hamburger menu at incorrect breakpoint

* Fix left nav hidden after expanding from mobile

If you expand and collapse the left nav while on mobile and expand to a
desktop view, the left nav would be hidden; this has been fixed

* Unify navbar on homepage with rest of website

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -146,12 +146,12 @@ else %}{% assign edit_url = "" %}{% endif %} {% break %} {% endif %} {% endfor %
 						</section>
 					</main>
 					<nav class="col-nav">
-						<div class="sidebar{% if page.landing == true %}-home{%else%}{% endif %} hidden-sm hidden-xs">
+						<div id="sidebar-nav" class="sidebar hidden-sm hidden-xs">
 						{% include side-menu.html %}
 						</div>
 					</nav>
 					<div class="col-toc">
-							<div id="{% if page.landing == true %}sidebar-right{%else%}sidebar-wrapper{% endif %}" class="{% if page.landing == true %} affix-top hidden-xs hidden-sm{%else%}sidebar-wrapper hidden-xs hidden-sm{% endif %}" {% if page.landing == true %} data-spy="affix" data-offset-top="490"{% endif %}>
+							<div class="sidebar hidden-xs hidden-sm">
 							<div class="toc-nav">
 								<div class="feedback-links">
 									<ul>
@@ -215,6 +215,7 @@ else %}{% assign edit_url = "" %}{% endif %} {% break %} {% endif %} {% endfor %
 	<script defer src="/js/menu.js"></script>
 	<script src="/js/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/stickyfill.min.js"></script>
 	<script defer src="/js/docs.js"></script>
 </body>
 
