Fix overflow issue
- fix menu overflow
- add docker con baner

--- a/_includes/global-header.html
+++ b/_includes/global-header.html
@@ -36,12 +36,6 @@
                             <li><a href="https://cloud.docker.com/">Create Docker ID</a></li>
                             <li><a href="https://cloud.docker.com/login">Sign In</a></li>
                         </ul>
-<!--                             <div class="user-nav hidden-sm">
-                                <ul>
-                                    <li><a href="https://cloud.docker.com/">Create Docker ID</a></li>
-                                    <li><a href="https://cloud.docker.com/login">Sign In</a></li>
-                                </ul>
-                            </div> -->
                         </div>
                     <!--/.nav-collapse -->
                 </div>
@@ -62,9 +56,9 @@
                 </div>
             </div>
         </div>
-        <a href="http://2017.dockercon.com/register-dockercon-2017/" target="_blank">
+        <a href="http://europe-2017.dockercon.com" target="_blank">
         <div class="banner">
-            <img src="images/dockercon-register-now.svg">
+            <img src="images/eu-dockercon.svg">
         </div>
         </a>
     </div>
