--- a/_layouts/library.html
+++ b/_layouts/library.html
@@ -1,6 +1,7 @@
 ---
 layout: docs
 toc_min: 1
+noratings: true
 ---
 {% capture fileToUse %}{% if page.file %}{{ page.file }}{% else %}README.md{% endif %}{% endcapture %}
 {% capture ghrepo %}{% include_relative library/{{ page.repo }}/github-repo %}{% endcapture %}
