Fix for relative file path

--- a/_includes/global-header.html
+++ b/_includes/global-header.html
@@ -5,7 +5,7 @@
             <nav class="nav-primary">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <img class="logo" src="../images/docker-docs-logo.svg" alt="Docker Docs" title="Docker Docs">
+                        <img class="logo" src="/images/docker-docs-logo.svg" alt="Docker Docs" title="Docker Docs">
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="primary nav navbar-nav">
