Add CSS for option to create inline images (like whale menu) (#3877)
* add CSS tests for Josh

Signed-off-by: Victoria Bialas <victoria.bialas@docker.com>

* new class inline for images, updated docs to call class

Signed-off-by: Victoria Bialas <victoria.bialas@docker.com>

* removing last test paragraph

Signed-off-by: Victoria Bialas <victoria.bialas@docker.com>

--- a/_scss/_utilities.scss
+++ b/_scss/_utilities.scss
@@ -58,6 +58,9 @@ i.fa.fa-outdent {
     padding: 0px 15px 10px 15px;
 }
 
+img.inline {
+    display: inline;
+}
 
 /*
 * Search *********************************************************************
@@ -259,4 +262,3 @@ div#autocompleteResults span {
 input.gsc-search-button, input.gsc-search-button:hover, input.gsc-search-button:focus {
     display: none!important;
 }
-
