expand/collapse accordion full implementation, explanation in test.md
Signed-off-by: Victoria Bialas <victoria.bialas@docker.com>

--- a/_scss/_utilities.scss
+++ b/_scss/_utilities.scss
@@ -62,6 +62,19 @@ img.inline {
     display: inline;
 }
 
+.panel-heading .chevron:after {
+    content: "\f0d8";
+}
+
+.panel-heading.collapsed .chevron:after {
+    content: "\f0d7";
+}
+
+.panel-heading:hover{
+    background: #fafdfe;
+}
+
+
 /*
 * Search *********************************************************************
 *
