--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -214,6 +214,7 @@ else %}{% assign edit_url = "" %}{% endif %} {% break %} {% endif %} {% endfor %
 	<!-- <script src="/js/anchorlinks.js"></script> -->
 	<script defer src="/js/menu.js"></script>
 	<script src="/js/jquery.js"></script>
+	<script src="/js/jquery.twbsPagination.min.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/stickyfill.min.js"></script>
 	<script defer src="/js/docs.js"></script>
