--- a/_scss/_utilities.scss
+++ b/_scss/_utilities.scss
@@ -58,9 +58,23 @@ i.fa.fa-outdent {
     padding: 0px 15px 10px 15px;
 }
 
+
+/*
+*
+* Inline graphics and icons (like the whale menu icon in d4mac, d4win)
+*
+*/
+
 img.inline {
     display: inline;
 }
+
+
+/*
+*
+* Bootstrap expand/collapse accordions
+*
+*/
 
 .panel-heading .chevron:after {
     content: "\f0d8";
