Better examples to show Compose file structure, expand/collapse accordion (#3967)
* better examples to show Compose file structure

Signed-off-by: Victoria Bialas <victoria.bialas@docker.com>

* cleaned up leading spaces in Compose file example

Signed-off-by: Victoria Bialas <victoria.bialas@docker.com>

* cleaned up leading spaces, added a test file

Signed-off-by: Victoria Bialas <victoria.bialas@docker.com>

* expand/collapse accordion full implementation, explanation in test.md

Signed-off-by: Victoria Bialas <victoria.bialas@docker.com>

* delete temporary test file from PR

Signed-off-by: Victoria Bialas <victoria.bialas@docker.com>

* fix accordion to work on mobile (cursor style)

Signed-off-by: Victoria Bialas <victoria.bialas@docker.com>

* verified fix for mobile worked, added same to test.md, updated notes and content

Signed-off-by: Victoria Bialas <victoria.bialas@docker.com>

* Clarifed details on test page, fixed references for FontAwesome icons

Signed-off-by: Victoria Bialas <victoria.bialas@docker.com>

--- a/_scss/_utilities.scss
+++ b/_scss/_utilities.scss
@@ -58,9 +58,36 @@ i.fa.fa-outdent {
     padding: 0px 15px 10px 15px;
 }
 
+
+/*
+*
+* Inline graphics and icons (like the whale menu icon in d4mac, d4win)
+*
+*/
+
 img.inline {
     display: inline;
 }
+
+
+/*
+*
+* Bootstrap expand/collapse accordions
+*
+*/
+
+.panel-heading .chevron:after {
+    content: "\f0d8";
+}
+
+.panel-heading.collapsed .chevron:after {
+    content: "\f0d7";
+}
+
+.panel-heading:hover{
+    background: #fafdfe;
+}
+
 
 /*
 * Search *********************************************************************
