--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -215,6 +215,7 @@ else %}{% assign edit_url = "" %}{% endif %} {% break %} {% endif %} {% endfor %
 	<script defer src="/js/menu.js"></script>
 	<script src="/js/jquery.js"></script>
 	<script src="/js/jquery.twbsPagination.min.js"></script>
+	<script src="/js/jquery.blockUI.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/stickyfill.min.js"></script>
 	<script defer src="/js/docs.js"></script>
